[package]
name = "mmmpm"
version = "0.1.0"
authors = ["t-sin <shinichi.tanaka45@gmail.com>"]
description = "A package manager for mimium"
edition = "2018"

[dependencies]
clap = { version = "2.33.3", features = ["yaml"] }
dirs = "3.0.1"

log = "0.4.0"
env_logger = "0.8.3"

serde = { version = "1.0.124", features = ["derive"] }
toml = "0.5.8"
