[package]
name = "mmmpm"
version = "0.1.0"
authors = ["t-sin <shinichi.tanaka45@gmail.com>"]
description = "A package manager for mimium"
edition = "2018"

[dependencies]
mmmpm_host = { path = "crates/host" }
mmmpm_host_github = { path = "crates/host_github" }
mmmpm_package = { path = "crates/package" }
mmmpm_storage = { path = "crates/storage" }
mmmpm_storage_filesystem = { path = "crates/storage_filesystem" }

clap = { version = "2.33.3", features = ["yaml"] }
dirs = "3.0.1"

log = "0.4.0"
env_logger = "0.8.3"
