[package]
name = "mmmpm_host_github"
version = "0.1.0"
authors = ["t-sin <shinichi.tanaka45@gmail.com>"]
description = "A package host abstraction: GitHub"
edition = "2018"

[dependencies]
mmmpm_host = { path = "../host" }

bytes = "1.0.1"
zip = "0.5.12"
reqwest = { version = "0.11.2", features = ["blocking"] }
