[package]
name = "mmmpm_package"
version = "0.1.0"
authors = ["t-sin <shinichi.tanaka45@gmail.com>"]
description = "A package abstraction"
edition = "2018"

[dependencies]
mmmpm_host = { path = "../host" }
mmmpm_host_github = { path = "../host_github" }

serde = { version = "1.0.124", features = ["derive"] }
toml = "0.5.8"
